--- a/src/styles/VoiceAssistant.css
+++ b/src/styles/VoiceAssistant.css
@@ -1,3 +1,10 @@
+/*
+#363636 - Color Negro
+#CCCCCC - Color Gris
+#638A66 - Color Verde
+#A3BDA2 - Color Verde Claro
+*/
+
 .voice-assistant {
     display: flex;
     flex-direction: column;
@@ -6,18 +13,15 @@
     margin-top: 20px;
   }
   
-  button {
-    padding: 10px 20px;
-    background-color: #638a66;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+  .btn-chatbot {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    z-index: 9999;
   }
   
-  button:hover {
-    background-color: #4b7052;
+  .btn-chatbot:hover {
+    background-color: #2200ff;
   }
   
   p {
