--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -100,9 +100,10 @@
   }
   
   .btn-account{
-    padding: 10px 30px;
+    padding: 10px 40px;
     color: #ffffff;
     font-size: 16px;
+    border: none;
     border-radius: 6px;
     background: #638A66;
   }
