--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -144,7 +144,7 @@
     display: block;
     max-width: 1600px;
     width: 96%;
-    background-image: linear-gradient(to bottom, rgb(102 223 145 / 0%), rgb(160 218 183 / 60%)), /* Degradado */ url(/src/assets/images/cheerful-young-lady-dressed-pajama-sleeping-bed.jpg);
+    background-image: linear-gradient(to bottom, rgb(102 223 145 / 0%), rgb(160 218 183 / 60%)), /* Degradado */ url(/src/assets/images/imagen-mujer-durmiendo.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -175,4 +175,17 @@
     font-family: Montserrat;
     font-weight: 400;
     color: #363636;
+}
+
+@media screen and (max-width: 768px){
+  .modules-section {
+    display: grid;
+    max-width: 1600px;
+    width: 96%;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin: -130px auto 30px auto;
+    padding: 40px;
+    border-radius: 10px;
+}
 }
